tests/snapshots/run_wpt_conformance__coreml_lstm_float32_tensors_steps_1_with_options_bias__options_recurrentBias__options_activations___relu____relu____relu___and_options_initialHiddenState.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lstm.https.any.js lstm float32 tensors steps=1 with options.bias, options.recurrentBias, options.activations=['relu', 'relu', 'relu'] and options.initialHiddenState, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported operation: lstm

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    lstmInitialHiddenState: f32[1, 2, 2];
  }

  consts {
    operand_0: f32[1, 8] @bytes([0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 0, 64]);
    operand_2: f32[1, 2, 2] @bytes([0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 128, 63]);
    operand_3: f32[1, 8] @bytes([0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 0, 64]);
    operand_4: f32[1, 8, 2] @bytes([205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61, 205, 204, 204, 61]);
    operand_5: f32[1, 8, 2] @bytes([0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 0, 192]);
  }

  nodes {
    [lstmOutput1, lstmOutput2] = lstm(operand_2, operand_5, operand_4, activations=["relu", "relu", "relu"], bias=0, direction="", initialCellState=null, initialHiddenState=1, label="", layout="", peepholeWeight=null, recurrentBias=3, returnSequence=false);
  }

  outputs { lstmOutput1; lstmOutput2; }
}
